# Fabric

./: .gitignore  Cargo.toml  README.md
crates/framework/: Move.toml
crates/framework/sources/: account.move
crates/server/: Cargo.toml
crates/storage/: Cargo.toml
crates/storage/src/: data_cache.rs  db.rs  lib.rs  resolver.rs  state.rs  storage.rs
crates/storage/src/reader/: state.rs
crates/storage/src/readers/: state.rs
crates/storage/src/store/: mod.rs
crates/storage/src/stores/: state.rs
crates/storage/src/tests/: mod.rs  resolver_tests.rs  state_tests.rs  tx_tests.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs  publish_modules.rs
crates/tests/src/helpers/: compiler.rs
crates/tests/src/mocks/: db.rs  storage.rs
crates/types/: Cargo.toml
crates/types/src/: access_path.rs  account_state.rs  address.rs  authenticator.rs  identifier.rs  lib.rs  raw_account_state.rs  raw_transaction.rs  signed_transaction.rs  validator.rs
crates/types/src/auth/: auth_session.rs  authenticator.rs  mod.rs
crates/types/src/transaction/: mod.rs  raw_transaction.rs  signed_transaction.rs  verified_transaction.rs
crates/vm/: Cargo.toml
crates/vm/src/: authenticator.rs  lib.rs  natives.rs  transaction.rs  vm.rs  vm_impl.rs
crates/vm/src/resolvers/: address.rs
