[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.dependencies]
bcs = "0.1.5"
serde = { version = "1.0.188", features = ["derive"] }

move-vm-runtime = { git = "https://github.com/move-language/move", rev = "ea70797099baea64f05194a918cebd69ed02b285" }
move-core-types = { git = "https://github.com/move-language/move", rev = "ea70797099baea64f05194a918cebd69ed02b285" }
move-vm-types = { git = "https://github.com/move-language/move", rev = "ea70797099baea64f05194a918cebd69ed02b285" }